[package]
name = "fire-postgres"
description = "A async postgres driver focused on ease of use"
version = "0.1.0"
authors = ["Sören Meier <info@s-me.ch>"]
homepage = "https://fire-lib.com/"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
