[package]
name = "fire-postgres-derive"
description = "Derive types for fire-postgres"
version = "0.2.0"
authors = ["Sören Meier <info@soerenmeier.ch>"]
homepage = "https://fire-lib.com/"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.66"

[lib]
proc_macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
proc-macro2 = "1.0"
proc-macro-crate = "3.1"
