[package]
name = "fire-postgres-types"
description = "Common types when working with Postgres in Rust"
version = "0.1.0-alpha.1"
authors = ["Sören Meier <info@soerenmeier.ch>"]
homepage = "https://fire-lib.com/"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.67"

[features]
serde = ["dep:serde"]
json = ["dep:postgres-types", "postgres-types?/with-serde_json-1"]
protobuf = ["dep:fire-protobuf"]
juniper = ["dep:juniper"]
postgres = ["dep:postgres-types"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
chrono = "0.4.30"
fire-protobuf = { version = "0.1.2", optional = true }
juniper = { version = "0.16", default-features = false, optional = true }
base64 = "0.22"
rand = "0.8"
postgres-types = { version = "0.2", optional = true }
bytes = "1.6.0"
postgres-protocol = "0.6.6"

[dev-dependencies]
serde_json = "1.0"
