[package]
name = "fire-postgres"
description = "A async postgres driver focused on ease of use"
version = "0.1.19"
authors = ["Sören Meier <info@soerenmeier.ch>"]
homepage = "https://fire-lib.com/"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.66"

[features]
default = ["connect"]
connect = ["dep:tokio-postgres", "dep:postgres-types", "dep:postgres-protocol", "dep:tokio"]
hash = ["dep:bcrypt"]
# deprecated
show-sql = []
crypto-cipher = ["crypto/cipher", "crypto/b64"]
crypto-signature = ["crypto/signature", "crypto/b64"]
crypto-token = ["crypto/b64"]
json = ["dep:serde_json"]
email = ["dep:email_address"]
protobuf = ["dep:fire-protobuf"]
graphql = ["dep:juniper"]

[dependencies]
tokio-postgres = { version = "0.7", optional = true }
postgres-types = { version = "0.2", optional = true }
postgres-protocol = { version = "0.6", optional = true }
tokio = { version = "1.0", features = ["rt"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
chrono = "0.4.30"
bcrypt = { version = "0.15", optional = true }
fire-postgres-derive = { version = "0.1", path = "../fire-postgres-derive" }
rand = "0.8"
base64 = "0.21"
fallible-iterator = "0.2"
bytes = "1.0"
crypto = { package = "fire-crypto", version = ">0.3.5, 0.4", optional = true }
email_address = { version = "0.2", optional = true }
fire-protobuf = { version = "0.1.2", optional = true }
juniper = { version = "0.15", default-features = true, optional = true }
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0"