[package]
name = "fire-postgres"
description = "A wrapper around tokio-postgres to simplify working with Postgres databases."
version = "0.3.0-beta.1"
authors = ["Sören Meier <info@soerenmeier.ch>"]
homepage = "https://fire-lib.com/"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[features]
crypto-cipher = ["crypto/cipher", "crypto/b64", "crypto/postgres"]
crypto-signature = ["crypto/signature", "crypto/b64", "crypto/postgres"]
crypto-token = ["crypto/b64", "crypto/postgres"]
json = [
	"dep:serde_json",
	"tokio-postgres/with-serde_json-1",
	"types/serde",
	"types/json",
]
email = ["dep:email_address"]
protobuf = ["dep:fire-protobuf"]
graphql = ["dep:juniper"]

[dependencies]
tokio-postgres = "0.7"
postgres-types = "0.2"
postgres-protocol = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
chrono = "0.4.30"
fire-postgres-derive = { version = "0.3.0-alpha.1", path = "../fire-postgres-derive" }
rand = "0.8"
base64 = "0.22"
fallible-iterator = "0.2"
bytes = "1.0"
crypto = { package = "fire-crypto", version = "0.4.3", optional = true }
email_address = { version = "0.2", optional = true }
fire-protobuf = { version = "0.1.2", optional = true }
juniper = { version = "0.16", default-features = false, optional = true }
tracing = "0.1"
deadpool-postgres = "0.13.0"
thiserror = "1.0.58"
types = { package = "fire-postgres-types", version = "0.1.0-alpha.1", path = "../fire-postgres-types", features = [
	"postgres",
] }
deadpool = "0.11.2"
futures-util = "0.3.14"
pin-project-lite = "0.2.14"

[dev-dependencies]
serde_json = "1.0"
